force-app/main/default/objects/Skill_Inventory__c/Skill_Inventory__c.object-meta.xml
<CustomObject>
    <description>Objet pour inventorier les compétences de chaque employé</description>
    <label>Skill Inventory</label>
    <nameField>
        <label>Skill Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skill Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>