force-app/main/default/objects/Skill_Inventory__c/fields/Assessment_Source__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Source__c</fullName>
    <label>Assessment Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>