force-app/main/default/objects/Skill_Inventory__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employe__c</referenceTo>
    <relationshipLabel>Skill Inventories</relationshipLabel>
    <relationshipName>Skill_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>