force-app/main/default/objects/Skill_Inventory__c/fields/Gap__c.field-meta.xml
<CustomField>
    <fullName>Gap__c</fullName>
    <formula>Target_Level__c - Current_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>