force-app/main/default/objects/Skill_Inventory__c/fields/Last_Assessed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Assessed_Date__c</fullName>
    <label>Last Assessed Date</label>
    <type>Date</type>
</CustomField>