force-app/main/default/objects/Skill_Inventory__c/fields/Recommended_Training__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Training__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Recommended Training</label>
    <referenceTo>Training__c</referenceTo>
    <relationshipLabel>Skill Inventories</relationshipLabel>
    <relationshipName>Skill_Inventories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>