force-app/main/default/objects/Skill_Inventory__c/fields/Skill_Category__c.field-meta.xml
<CustomField>
    <fullName>Skill_Category__c</fullName>
    <label>Skill Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Programming</fullName>
            </value>
            <value>
                <fullName>Soft Skills</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>