force-app/main/default/objects/Skill_Inventory__c/fields/Skill_Score__c.field-meta.xml
<CustomField>
    <fullName>Skill_Score__c</fullName>
    <formula>Current_Level__c / Target_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>